实现悬停的最简单做法

--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".newSolution.SolutionActivity"></activity>
+        <activity android:name=".airStop.AirStopActivity"></activity>
     </application>
 
 </manifest>
